k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: url-minifier
  labels:
    app: url-minifier-api
spec:
  selector:
    app: url-minifier-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
